--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,17 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    env_file:
+      - .env.local
     environment:
-      - MONGODB_URI=mongodb+srv://goldeneducation786:nELPDRLW1CQbo96A@cluster0.nah9oyp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-      - NODE_ENV=production
+      NODE_ENV: development
     restart: always
+    networks:
+      - app-network
+    volumes:
+      - .:/app
+      - /app/node_modules
 
 networks:
-  default:
+  app-network:
     driver: bridge
