--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
   stages {
     stage('Checkout Code') {
       steps {
-        git 'https://github.com/YOUR_USERNAME/YOUR_REPO_NAME.git'
+        git 'https://github.com/furqan137/PostManager.git'
       }
     }
 
@@ -33,7 +33,7 @@ pipeline {
 
   post {
     success {
-      echo "✅ Deployment successful! App should be running at http://<YOUR-EC2-IP>:3000"
+      echo "✅ Deployment successful! App should be running at http://34.230.89.192:3000"
     }
     failure {
       echo "❌ Deployment failed. Please check Jenkins logs."
