--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,25 +8,45 @@ pipeline {
   stages {
     stage('Checkout Code') {
       steps {
-        git 'https://github.com/furqan137/PostManager.git'
+        echo '✅ Checking out source code...'
+        checkout scm
       }
     }
 
     stage('Stop Existing Containers') {
       steps {
-        sh 'docker-compose -f $COMPOSE_FILE down || true'
+        echo '🛑 Stopping existing containers (if any)...'
+        sh '''
+          docker-compose -f $COMPOSE_FILE down || true
+        '''
       }
     }
 
     stage('Build and Deploy') {
       steps {
-        sh 'docker-compose -f $COMPOSE_FILE up -d --build'
+        echo '🚀 Building and starting containers...'
+        sh '''
+          docker-compose -f $COMPOSE_FILE up -d --build
+        '''
       }
     }
 
     stage('Health Check') {
       steps {
-        sh 'curl -s --max-time 10 http://localhost:3000 || echo "App may not be up yet"'
+        echo '🔍 Running health check on http://localhost:3000...'
+        sh '''
+          for i in {1..5}; do
+            if curl -s --max-time 5 http://localhost:3000 > /dev/null; then
+              echo "✅ App is up!"
+              exit 0
+            else
+              echo "❌ Not up yet. Retrying in 5 seconds..."
+              sleep 5
+            fi
+          done
+          echo "❌ App failed health check"
+          exit 1
+        '''
       }
     }
   }
