--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -14,7 +14,14 @@ services:
     restart: always
     networks:
       - app-network
+    # Optional: healthcheck to monitor container health
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:3000 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 networks:
   app-network:
     driver: bridge
+
