--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: '3.8'
 
 services:
   nextjs:
+    container_name: ci-webappdev-nextjs-1
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "5100:3000"  # EC2 port : Container port
     env_file:
       - .env.local
     environment:
