--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "5100:3000"  # EC2 port : Container port
+      - "5100:3000"  # Host port : Container port
     env_file:
       - .env.local
     environment:
-      NODE_ENV: development
+      - NODE_ENV=development
     restart: always
     networks:
       - app-network
