--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,12 @@
-version: '3.8'
-
 services:
-  nextjs:
+  web:
     build:
       context: .
       dockerfile: Dockerfile
+    image: shop-sphere-jenkins_web:latest
     ports:
-      - "3000:3000"
+      - "5100:3000"
     env_file:
-      - .env.local
+      - .env
     environment:
-      NODE_ENV: development
-    restart: always
-    networks:
-      - app-network
-    volumes:
-      - .:/app
-      - /app/node_modules
-
-networks:
-  app-network:
-    driver: bridge
+      NODE_ENV: production
